# Capstone-GeoRecord

./: README.md  demo.md  docker-compose.yaml  libs.md
api/: Dockerfile  README.md  pyproject.toml
api/src/: location.py  location_query.py  main.py  middleware.py  search.py  thread.py
auth/: README.md  pyproject.toml
auth/src/: health.py  login.py  main.py  register.py
docs/: README.md
docs/design/: api-response.md
frontend/: Dockerfile  README.md  dev.Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: comments.ts  location.ts  threadAPI.ts
frontend/src/components/: addLocationModal.tsx  locationCard.tsx  map.tsx  mapLocationLayer.tsx  navbar.tsx  searchBar.tsx  thread.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: locations.tsx  login.tsx  profile.tsx  root.tsx  settings.tsx  signout.tsx  signup.tsx
iac/: .terraform.lock.hcl  api.tf  auth.tf  cloudfront.tf  container_definition.json.tpl  database.tf  frontend.tf  images.tf  load_balancer.tf  main.tf  terraform.tfstate  user.tf  vpc.tf
local/nginx/: nginx.conf
model/: workspace.dsl  workspace.json
postgres/: schema.sql
report/: report.md
tests/functionality-tests/: README.md  pyproject.toml
tests/functionality-tests/src/: main.py  test_api.py  test_auth.py
tests/load-tests/auth/: login.js  register.js
tests/load-tests/location/: get_location.js  (+1 more)
user/: Dockerfile  README.md  pyproject.toml
user/src/: __init__.py  db_utils.py  health.py  location.py  location_query.py  main.py  middleware.py
