[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = "Tests for the HTTP api"
authors = ["Thomas Day <git@tday.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
